style.css
/* ... */
#welcomeHowToPlayBtnContainer {
    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    display: flex;
    justify-content: center;
    align-items: center;
    text-transform: uppercase;
    text-shadow: #ad8a53 0px 1px 0px;
    margin: auto;
    display: flex;
    flex-direction: column;
}

#welcomeHowToPlayBtn {
    font-size: 0.8rem;
    color:gold;
    background-color: #0613d0;
    width: 7rem;
    border-radius: 6px;
    padding: 0.5rem;
    cursor: pointer;
    text-transform: uppercase;
    text-shadow: #ad8a53 0px 1px 0px;
    margin-bottom: 1rem;
}

.difficultyButtonsColumn {
    margin: auto;        
    width: 100%;
    line-height: 0.75;
    align-items: center;
    justify-content: center;
    display: flex;
    flex-direction: column;
    gap: 1;
}

.difficultyButtons {
    padding: 1rem 0;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    width: 11rem;
}

#easyModeContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
}

#easyModeBtn {
    font-size: 2rem;
    color:gold;
    width: 11rem;
    background-color: #0613d0;
    text-transform: uppercase;
    text-shadow: #3033ff 0px 1px 0px;
    border-radius: 6px;
    padding: 0.5rem;
    cursor: pointer;
}

#normalModeContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
}

#normalModeBtn {
    font-size: 2rem;
    color:rgb(255, 136, 0);
    width: 11rem;
    background-color: #0613d0;
    text-transform: uppercase;
    text-shadow: #3033ff 0px 1px 0px;
    border-radius: 6px;
    padding: 0.5rem;
    cursor: pointer;
}

#hardModeContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
}

#hardModeBtn {
    font-size: 2rem;
    color:rgb(255, 71, 25);
    width: 11rem;
    background-color: #0613d0;
    text-transform: uppercase;
    text-shadow: #3033ff 0px 1px 0px;
    border-radius: 6px;
    padding: 0.5rem;
    cursor: pointer;
}

#activateMinesContainer {
    color: #0613d0;
    background-color: transparent;
    text-shadow: #3033ff 0px 1px 0px;
    border-color: #dfc09b;
    border-style:outset;
    border-radius: 6px;
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    margin-top: 1rem;
    width: 16rem;
    text-transform: uppercase;
    font-size: 1.6rem;
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    padding-left: 0.5rem;
    padding-right: 0.5rem;    
}

/*The Mines Switch*/
.switch {
    position: relative;
    display: inline-block;
    width: 60px;
    height: 34px;
    margin-left: 0.75rem;
}

.switch input {
    opacity: 0;
    width: 0;
    height: 0;
}

.slider.round {
    position: absolute;
    cursor: pointer;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    background-color: #dfc09b;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 6px;
}

.slider.round:before {
    position: absolute;
    content: "";
    height: 26px;
    width: 26px;
    left: 4px;
    bottom: 4px;
    background-color: #383838;
    -webkit-transition: .4s;
    transition: .4s;
    border-radius: 16%;
}

input:checked + .slider {
    background-color: #ff0000;
}



input:checked + .slider:before {
    -webkit-transform: translateX(26px);
    -ms-transform: translateX(26px);
    transform: translateX(26px);
}
  
#winGameModalContent {
    background-color: bisque;
    border-color: #0613d0;
    border-style: solid;
    border-width: 0.2 rem;
    align-self: center;
    justify-self: center;
    margin: 2% auto;
    max-width: 40rem;
    width: 80vw;
}

h4 {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 200%;
    color:#383838;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
}
    
#winningTurnCounter {
    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
    font-size: 4rem;
    color:#0613d0;
    font-weight: bold;
    text-transform: uppercase;
    padding-left: 5%;
    padding-right: 5%;
    text-align: center;
    margin: auto;
    margin-top: 6rem;
    margin-bottom: 6rem;
}

#winPlayAgainContainer{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    width: 70%;
}

#winPlayAgain {
    font-size: 1.8rem;
    color:gold;
    background-color: #0613d0;
    border-radius: 6px;
    padding: 0.5rem;
    cursor: pointer;
    text-transform: uppercase;
    text-shadow: #856a49 0px 1px 0px;
    width: 100%; 
}

#winShowSolutionContainer{
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    width: 70%
}

#revealObjectsAfterWin {
    font-size: 1.8rem;
    color:gold;
    background-color: #0613d0;
    border-radius: 6px;
    padding: 0.5rem;
    cursor: pointer;
    text-transform: uppercase;
    text-shadow: #856a49 0px 1px 0px;
    width: 100%;
}

#gameOverTurnsModalContent {
    background-color: bisque;
    border-color: #0613d0;
    border-style: solid;
    border-width: 0.2 rem;
    align-self: center;
    justify-self: center;
    margin: 2% auto;
    max-width: 40rem;
    width: 80vw;
}

.gameOverButtonsColumn {
    margin: auto;        
    width: 100%;
    line-height: 0.75;
    align-items: center;
    justify-content: center;
    
}

.gameOverButtons {
    padding: 1rem 0;
    font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    
}

#losePlayAgainContainer {
    display: flex;
    justify-content: center;
    align-items: center;
    margin: auto;
    width: 70%;
}

#losePlayAgain {
    font-size: 1.8rem;
    color:gold;
    background-color: #0613d0;
    border-radius: 6px;
    padding: 0.5rem;
    cursor: pointer;
    text-transform: uppercase;
    text-shadow: #856a49 0px 1px 0px;
    width: 100%;
}
/* ... */

